2011-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/00_header.in (load_video): Handle the case when no video
	drivers available.
	Thanks to: Axel Beckert.

2011-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c (write_font_pf2): Use appropriate type for data
	variable. Fixes problem on big endian platforms.

2011-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (ieee1275_fb): Disable on sparc.
	It doesn't work well there.

2011-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/context.c (grub_env_context_close): Silence spurious
	warning.
	* grub-core/normal/menu.c (grub_menu_execute_entry): Likewise.
	* grub-core/partmap/msdos.c (pc_partition_map_embed): Use unsigned
	counter.

2011-01-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Use alias->path rather than buggy "canon".

	* grub-core/disk/ieee1275/ofdisk.c (ofdisk_hash_add_real): New function.
	(ofdisk_hash_add): New argument curcan. All users updated.

2011-01-11  Colin Watson  <cjwatson@ubuntu.com>

	* configure.ac: Fall back to `true' if `makeinfo' does not exist.

2011-01-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/powerpc/ieee1275/linux.c (grub_linux_load32): Apply
	loadmask before doing any calculations. Use correct type for offset.
	(grub_linux_load64): Likewise.

2011-01-11  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mklayout.c (console_grub_equivalences_shift): Terminate
	with NULL.
	(console_grub_equivalences_unshift): Likewise.
	Reported by: Daniel Dehennin.

2011-01-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/i386/pc/pxe.c (set_mac_env): Export variable.
	(set_env_limn_ro): Likewise.
	(GRUB_MOD_INIT): Likewise.
	* grub-core/hook/datehook.c (GRUB_MOD_INIT): Likewise. Change to
	ARRAY_SIZE while on it.
	(GRUB_MOD_FINI): Change to ARRAY_SIZE.
	* grub-core/normal/context.c (grub_env_export): Move from here ...
	* grub-core/kern/env.c (grub_env_export): ... here.